@@ -1,3 +1,11 @@
+20150128
+========
+- Added expiration for documents
+- Documents are now inside database
+- Improved code reutilization
+- Add admin mode
+- You can delete documents in admin mode
+
 20140128
 ========
 - Solved bug with mail dates.
